// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components: Tabs BasicUsage renders 1`] = `
<Fragment>
  <h2
    id="basic-usage"
  >
    Basic usage
  </h2>
  <p>
    Add class 
    <Property
      value=".tabs"
    />
     to a div containing 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;ul&gt;
    </PrismCode>
    and nest 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;li&gt;
    </PrismCode>
     as needed. Make sure that the tabs will not overflow on screens of normal size.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Tabs
      items={
        Array [
          "Card",
          "Discounts",
          "Transactions",
          "Invoice",
          "Settings",
          "Audit trail",
        ]
      }
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Tabs JavascriptMethods renders 1`] = `
<Fragment>
  <h2
    id="javascript-methods"
  >
    JavaScript methods
  </h2>
  <JavascriptDocs
    componentName="tabs"
  />
</Fragment>
`;

exports[`Components: Tabs TabsScroll renders 1`] = `
<Fragment>
  <h2
    id="tabs-scroll"
  >
    Tabs with scroll
  </h2>
  <p>
    To make tabs more mobile friendly, use class 
    <Property
      value=".tabs-scroll-{desired_size}"
    />
    . The available sizes can be found in our 
    <Link
      to="/docs/core/breakpoints"
    >
      breakpoints documentation
    </Link>
    .
    <Property
      value=".tabs-scroll-{desired_size}"
    />
     will make the tabs scrollable in case of overflow.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Tabs
      items={
        Array [
          "Card",
          "Discounts",
          "Transactions",
          "Invoice",
          "Settings",
          "Audit trail",
        ]
      }
      mode="md"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Tabs renders 1`] = `
<DocContainer
  docToc={true}
>
  <p
    className="lead"
  >
    Use tabs to show which page or section that is active out of several options.
  </p>
  <BasicUsage />
  <TabsScroll />
  <JavascriptMethods />
</DocContainer>
`;
